Fixed resectioning issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,8 +59,6 @@ target_link_libraries(matcher
   openMVG_matching_image_collection
   stlplus)
 
-add_subdirectory(src/deps)
-
 add_executable(reconstructor src/Reconstruct.cpp)
 target_link_libraries(reconstructor
   openMVG_system
@@ -68,7 +66,8 @@ target_link_libraries(reconstructor
   openMVG_features
   openMVG_sfm
   coloc_sfm
-  stlplus)
+  stlplus
+  ${CERES_INCLUDE_DIRS})
 
 add_executable(localizer src/Localize.cpp)
 target_link_libraries(localizer
