Added covariance plotting function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,18 +16,18 @@ else()
         message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 endif()
 
-if(WIN32)
+if(MSVC)
     set(OpenMVG_DIR "D:/Code/Libraries/openMVG_install/share/openMVG/cmake")
     set(PYTHON_LIBRARY "C:/Python27/libs/python27.lib")
     set(PYTHON_INCLUDE_DIR "C:/Python27/include;C:/Python27/Lib/site-packages/numpy/core/include")
-endif(WIN32)
+endif(MSVC)
 
 if(UNIX)
 endif(UNIX)
 
 find_package(OpenMVG REQUIRED)
 find_package(Threads REQUIRED)
-find_package(PythonLibs 2.7)
+find_package(PythonLibs 2.7 REQUIRED)
 find_package(OpenMP)
 if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
