Bugfix in localization code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,9 @@ else()
 endif()
 
 if(MSVC)
-    set(OpenMVG_DIR "D:/Code/Libraries/openMVG_install_debug/share/openMVG/cmake")
-    set(PYTHON_LIBRARY "C:/Python36-32/libs/python36_d.lib")
-    set(PYTHON_INCLUDE_DIR "C:/Python36-32/include;C:/Python36-32/Lib/site-packages/numpy/core/include")
+    set(OpenMVG_DIR "D:/Code/Libraries/openMVG_install/share/openMVG/cmake")
+    set(PYTHON_LIBRARY "C:/Python27/libs/python27.lib")
+    set(PYTHON_INCLUDE_DIR "C:/Python27/include;C:/Python27/Lib/site-packages/numpy/core/include")
 endif(MSVC)
 
 if(UNIX)
@@ -27,7 +27,7 @@ endif(UNIX)
 
 find_package(OpenMVG REQUIRED)
 find_package(Threads REQUIRED)
-find_package(PythonLibs 3.6 REQUIRED)
+find_package(PythonLibs 2.7 REQUIRED)
 find_package(OpenMP)
 if (OPENMP_FOUND)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
