--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-option(USE_CUDA "Enable CUDA features" OFF)
+option(USE_CUDA "Enable CUDA features" ON)
 option(USE_ROS "Enable ROS integration" OFF)
+option(USE_STREAM "Enable ROS image streaming" OFF)
 
 if(UNIX)
   add_definitions(-DUSE_ROS)
@@ -16,8 +17,8 @@ endif(UNIX)
 if(MSVC)
   #set(OpenMVG_DIR "D:/Code/Libraries/openMVG_install/share/openMVG/cmake")
   #set(OpenCV_DIR "D:/Code/Libraries/opencv-3.4.0/opencv-3.4.0/build")
-  set(OpenMVG_DIR "C:/Code/Libraries/openMVG/install_debug/share/openMVG/cmake")
-  set(OpenCV_DIR "C:/Code/Libraries/opencv/install_debug")
+  set(OpenMVG_DIR "C:/Code/Libraries/openMVG/install_release/share/openMVG/cmake")
+  set(OpenCV_DIR "C:/Code/Libraries/opencv/install_release")
 endif(MSVC)
 
 add_subdirectory(../../github/dlib dlib_build)
@@ -45,14 +46,14 @@ endif(UNIX)
 if(USE_CUDA)
   add_definitions(-DUSE_CUDA)
   FIND_PACKAGE(CUDA REQUIRED) 
-  SET(CUDA_NVCC_FLAGS "-arch=sm_61 --use_fast_math -O3" CACHE STRING "nvcc flags" FORCE)
+  SET(CUDA_NVCC_FLAGS "-arch=sm_61" CACHE STRING "nvcc flags" FORCE)
   SET (CUDA_VERBOSE_BUILD ON CACHE BOOL "nvcc verbose" FORCE)
   SET(LIB_TYPE STATIC) 
   include_directories(include)
   CUDA_ADD_LIBRARY(koral ${LIB_TYPE} src/CUDALERP.cu src/CLATCH.cu src/CUDAK2NN.cu)
 endif(USE_CUDA)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -std=c++11 -march=native -funroll-all-loops -fpeel-loops -ftracer -ftree-vectorize -mavx2 -mfma -fomit-frame-pointer")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
 include_directories(
 if(MSVC)
@@ -97,6 +98,7 @@ target_link_libraries(coloc
   openMVG_image
   openMVG_features
   openMVG_multiview
+  openMVG_matching
   openMVG_matching_image_collection
   openMVG_sfm
   openMVG_geometry
